add intro section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,26 @@
   </head>
   <body>
     <div class="container">
+      <div class="section-intro">
+        <img src="assets/images/image-omelette.jpeg" alt="Image of Omelette" class="section-intro__img">
+        <h1 class="heading-primary">
+          Simple Omelette Recipe
+        </h1>
+        <p class="paragraph">
+          An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
+          to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+        </p>
+        <div class="section-intro__preparation-time">
+          <h3 class="heading-tertiary u-margin-bottom-small">
+            Preparation time
+          </h3>
+          <ul class="section-intro__time-details">
+            <li><span>Total</span>: Approximately 10 minutes</li>
+            <li><span>Preparation</span>: 5 minutes</li>
+            <li><span>Cooking</span>: 5 minutes</li>
+          </ul>
+        </div>
+      </div>
       
     </div>
     <!-- Simple Omelette Recipe
