add ingredient section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,19 @@
           </ul>
         </div>
       </div>
-      
+      <div class="section-ingredients">
+        <h2 class="heading-secondary">
+          Ingredients
+        </h2>
+        <ul class="section-ingredients__list">
+          <li><span>&nbsp;</span>2-3 large eggs</li>
+          <li><span>&nbsp;</span>Salt, to taste</li>
+          <li><span>&nbsp;</span>Pepper, to taste</li>
+          <li><span>&nbsp;</span>1 tablespoon of butter or oil</li>
+          <li><span>&nbsp;</span>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+        </ul>
+      </div>
+      <hr>
     </div>
     <!-- Simple Omelette Recipe
 
