--- a/index.html
+++ b/index.html
@@ -66,6 +66,34 @@
         </ol>
       </div>
       <hr>
+      <div class="section-nutrition">
+        <h2 class="heading-secondary">
+          Nutrition
+        </h2>
+        <p class="paragraph u-margin-bottom-medium">
+          The table below shows nutritional values per serving without the additional fillings.
+        </p>
+        <table class="section-nutrition__table">
+          <tbody>
+            <tr class="section-nutrition__table--row">
+              <th class="section-nutrition__table--header">Calories</th>
+              <td class="section-nutrition__table--value">277kcal</td>
+            </tr>
+            <tr class="section-nutrition__table--row">
+              <th class="section-nutrition__table--header">Carbs</th>
+              <td class="section-nutrition__table--value">0g</td>
+            </tr>
+            <tr class="section-nutrition__table--row">
+              <th class="section-nutrition__table--header">Protein</th>
+              <td class="section-nutrition__table--value">20g</td>
+            </tr>
+            <tr class="section-nutrition__table--row">
+              <th class="section-nutrition__table--header">Fats</th>
+              <td class="section-nutrition__table--value">22g</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
     <!-- Simple Omelette Recipe
 
